[package]
name = "xbee_s2c"
version = "0.1.0"
authors = ["Gabriel Smith <ga29smith@gmail.com>"]
description = "embedded_hal based driver for the XBee S2C."
repository = "https://github.com/yodaldevoid/xbee_s2c"
license = "MIT OR Apache-2.0"

[dependencies]
arraydeque = { version = "^0.4", default-features = false }
arrayvec = { version = "^0.4", default-features = false, features = ["use_union"] }
bitflags = "^1.0"
embedded-hal = { version = "0.2.1", features = ["unproven"] }
nb = "0.1.1"
